--- a/stylesheets/font.css
+++ b/stylesheets/font.css
@@ -6,7 +6,7 @@
 @font-face {
   font-family: "Menoe Grotesque Pro";
   src: url("../fonts/Menoe\ Grotesque\ Pro\ Italic.otf") format("opentype");
-  font-style: normal;
+  font-style: italic;
 }
 @font-face {
   font-family: "Inter-Regular";
