--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -7,6 +7,7 @@ body {
   margin: 0 auto; /*выравнивание по центру/*/
   font-family: "Menoe Grotesque Pro";
   white-space: nowrap;
+  overflow: hidden;
 }
 
 h1 {
