--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -423,19 +423,19 @@ h1 {
   margin-top: 60px;
   position: relative;
   display: flex;
-
-  transform: rotate(9.43deg);
+  background-color: #a1adcb;
+  overflow: hidden;
 }
-.thirtSection::before {
+/* .thirtSection::before {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #a1adcb;
+  
   transform: rotate(-9.43deg);
-}
+} */
 .thirtSection img {
   padding-top: 108px;
   padding-left: 177px;
